--- a/airflow_config/tests/setups/factory/config/factory.yaml
+++ b/airflow_config/tests/setups/factory/config/factory.yaml
@@ -39,11 +39,11 @@ dags:
         python_callable: airflow_config.tests.conftest.should_short_circuit
         dependencies: [task_1]
       task_3:
-        _target_: airflow_config.BashOperator
+        _target_: airflow_config.BashTask
         bash_command: "echo '1'"
         dependencies: [task_2]
       task_4:
-        _target_: airflow_config.BashOperator
+        _target_: airflow_config.BashTask
         bash_command: "echo `pwd`"
         dependencies: [task_3]
       task_5:
@@ -62,17 +62,14 @@ dags:
     schedule: "0 4 * * *"
     tasks:
       task_1:
-        _target_: airflow_config.BashOperator
-        operator: airflow.providers.standard.operators.bash.BashOperator
+        _target_: airflow_config.BashTask
         bash_command: "echo \"1\""
       task_2:
-        _target_: airflow_config.BashOperator
-        operator: airflow.providers.standard.operators.bash.BashOperator
+        _target_: airflow_config.BashTask
         bash_command: "echo 2"
         dependencies: [task_1]
       task_3:
-        _target_: airflow_config.BashOperator
-        operator: airflow.providers.standard.operators.bash.BashOperator
+        _target_: airflow_config.BashTask
         bash_command: "echo 3"
         dependencies: [task_1]
 
