--- a/airflow_config/tests/setups/factory/config/extensions/libraries.yaml
+++ b/airflow_config/tests/setups/factory/config/extensions/libraries.yaml
@@ -2,7 +2,7 @@
 
 defaults: []
 
-_target_: airflow_common_operators.LibraryList
+_target_: airflow_common.LibraryList
 git:
   - name: airflow-balancer
     repo: git@github.com:airflow-laminar/airflow-balancer.git
