--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "hydra-core",
     "jinja2",
     "omegaconf",
-    "pydantic>=2",
+    "pydantic>=2,<2.12",
 ]
 
 [project.optional-dependencies]
